-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.2
-
Component/s: C++ - Compiler
-
Labels:None
-
Environment:
Linux gcc
-
Patch Info:Patch Available
With cob_style switch, thrift compiler generates non-template method definitions into .tcc files, which results in link errors whenever you include a service header from multiple implementation files.
Moving non-template methods to .cpp file resolves the problem.
This problem is present only in recent master branch.
pull request url:
https://github.com/apache/thrift/pull/118