THRIFT-2520 Compiler:put non-template method definitions in .cpp files