compiler/cpp/src/generate/t_cpp_generator.cc
@@ -119,7 +119,7 @@ class t_cpp_generator : public t_oop_generator {
                                       bool read=true,
                                       bool write=true,
                                       bool swap=false);
-  void generate_struct_definition   (std::ofstream& out, t_struct* tstruct, bool setters=true);
+  void generate_struct_definition   (std::ofstream& out, std::ofstream& force_cpp_out, t_struct* tstruct, bool setters=true);
   void generate_copy_constructor     (std::ofstream& out, t_struct* tstruct);
   void generate_assignment_operator  (std::ofstream& out, t_struct* tstruct);
   void generate_struct_fingerprint   (std::ofstream& out, t_struct* tstruct, bool is_definition);
@@ -805,7 +805,7 @@ void t_cpp_generator::generate_forward_declaration(t_struct* tstruct) {
 void t_cpp_generator::generate_cpp_struct(t_struct* tstruct, bool is_exception) {
   generate_struct_declaration(f_types_, tstruct, is_exception,
                              false, true, true, true);
-  generate_struct_definition(f_types_impl_, tstruct);
+  generate_struct_definition(f_types_impl_, f_types_impl_, tstruct);
   generate_struct_fingerprint(f_types_impl_, tstruct, true);
   generate_local_reflection(f_types_, tstruct, false);
   generate_local_reflection(f_types_impl_, tstruct, true);
@@ -1127,6 +1127,7 @@ void t_cpp_generator::generate_struct_declaration(ofstream& out,
 }
 
 void t_cpp_generator::generate_struct_definition(ofstream& out,
+                                                 ofstream& force_cpp_out,
                                                  t_struct* tstruct,
                                                  bool setters) {
   // Get members
@@ -1136,13 +1137,13 @@ void t_cpp_generator::generate_struct_definition(ofstream& out,
 
   // Destructor
   if (tstruct->annotations_.find("final") == tstruct->annotations_.end()) {
-    out <<
+    force_cpp_out <<
       endl <<
       indent() << tstruct->get_name() << "::~" << tstruct->get_name() << "() throw() {" << endl;
     indent_up();
 
     indent_down();
-    out << indent() << "}" << endl << endl;
+    force_cpp_out << indent() << "}" << endl << endl;
   }
 
   // Create a setter function for each field
@@ -1875,12 +1876,12 @@ void t_cpp_generator::generate_service_helpers(t_service* tservice) {
     // TODO(dreiss): Why is this stuff not in generate_function_helpers?
     ts->set_name(tservice->get_name() + "_" + (*f_iter)->get_name() + "_args");
     generate_struct_declaration(f_header_, ts, false);
-    generate_struct_definition(out, ts, false);
+    generate_struct_definition(out, f_service_, ts, false);
     generate_struct_reader(out, ts);
     generate_struct_writer(out, ts);
     ts->set_name(tservice->get_name() + "_" + (*f_iter)->get_name() + "_pargs");
     generate_struct_declaration(f_header_, ts, false, true, false, true);
-    generate_struct_definition(out, ts, false);
+    generate_struct_definition(out, f_service_, ts, false);
     generate_struct_writer(out, ts, true);
     ts->set_name(name_orig);
 
@@ -3332,13 +3333,13 @@ void t_cpp_generator::generate_function_helpers(t_service* tservice,
   }
 
   generate_struct_declaration(f_header_, &result, false);
-  generate_struct_definition(out, &result, false);
+  generate_struct_definition(out, f_service_, &result, false);
   generate_struct_reader(out, &result);
   generate_struct_result_writer(out, &result);
 
   result.set_name(tservice->get_name() + "_" + tfunction->get_name() + "_presult");
   generate_struct_declaration(f_header_, &result, false, true, true, gen_cob_style_);
-  generate_struct_definition(out, &result, false);
+  generate_struct_definition(out, f_service_, &result, false);
   generate_struct_reader(out, &result, true);
   if (gen_cob_style_) {
     generate_struct_writer(out, &result, true);
